<resources>
    <string name="app_name">App_ReadBook</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn">BototmNavViewPager2</string>
    <string name="btn_home">Trang Chủ</string>
    <string name="btn_search">Tìm Kiếm</string>
    <string name="btn_favorite">Yêu Thích</string>
    <string name="btn_account">Cá Nhân</string>
    <string name="thong_tin">Thông Tin Cá Nhân</string>
    <string name="setting">Thiết Lập</string>
    <string name="Support">Hỗ Trợ</string>
    <string name="Log_Out">Đăng Xuất</string>
    <string name="title_activity_logi_username">logi_username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="navi_open">Open NavigationDrawar</string>
    <string name="navi_close">"Close NavigationDrawar"</string>

    <string name="facebook_app_id">2126499840829755</string>
    <string name="fb_login_protocol_scheme">fb2126499840829755</string>

</resources>